# very-simple-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  assembler.cpp  cpucontroller.cpp  cpucontroller.hpp  emu.cpp  irmap.cpp  irmap.hpp  main.cpp  mappings.cpp  mappings.hpp  types.cpp  types.hpp  util.cpp  util.hpp  vm.cpp  vm.hpp
sample-programs/: smileys.asm
